fixed video autoplay issue on mobile

--- a/styles/devices.css
+++ b/styles/devices.css
@@ -1404,7 +1404,7 @@
 
 @media only screen and (max-width: 400px) {
     .device {
-        margin-top: -150px;
+        margin-top: -130px;
         transform: scale(0.6);
     }
 }
